# ai-agent-practice

./: .env  README.md  pyproject.toml  requirements.txt
langchain/chat-model/: access-to-model.py
langchain/semantic-search/: index.py
